--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     depends_on:
       - dynamodb-local
     image: banst/awscli
-    container_name: app-node
+    container_name: table-creator
     environment:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
