--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       DYNAMODB_TABLE_NAME: ${DYNAMODB_TABLE_NAME}
       DB_TYPE: ${DB_TYPE}
       HTTP_PORT: ${HTTP_PORT}
+      AWS_XRAY_DAEMON_ADDRESS: xray-daemon:2000
       MONGODB_USER: ${MONGODB_USER}
       MONGODB_PASSWORD: ${MONGODB_PASSWORD}
       MONGODB_HOST: mongodb
@@ -55,3 +56,13 @@ services:
       DYNAMODB_TABLE_NAME: ${DYNAMODB_TABLE_NAME}
     command:
       dynamodb create-table --table-name ${DYNAMODB_TABLE_NAME} --attribute-definitions AttributeName=connectionId,AttributeType=S --key-schema AttributeName=connectionId,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --endpoint-url http://dynamodb-local:8000 --region ${AWS_DEFAULT_REGION}
+
+  # X-Ray Daemon that actually authenticates via locally-stored AWS credentials
+  xray-daemon:
+    command: "xray-daemon -o"
+    image: "amazon/aws-xray-daemon"
+    container_name: xray-daemon
+    environment:
+      AWS_REGION: eu-central-1
+      AWS_ACCESS_KEY_ID: ${REAL_AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${REAL_AWS_SECRET_ACCESS_KEY}
